[package]
name = "veza-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.32.0"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
rust_xlsxwriter = "0.92.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.148"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.7.1" #

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
