[package]
name = "veza-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
calamine = "0.34.0"
dotenv = "0.15.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
rust_xlsxwriter = "0.94.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
serde_json = "1.0.148"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"
tracing = "0.1.44"

[dev-dependencies]
mockito = "1.7.2" #

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
